# esp32_ota_ex

./: .gitignore  LICENSE  README.md
esp32_ota_ex/: CMakeLists.txt  sdkconfig.esp32-c6-devkitm-1
esp32_ota_ex/include/: keys.c  tcp_client.c
esp32_ota_ex/src/: main.c
nat_ota/ota/: CMakeLists.txt
nat_ota/ota/main/: CMakeLists.txt  keys.c  main.c  tcp_client.c
pc_tcp_server/: main.c
simple_AP/: CMakeLists.txt  platformio.ini
simple_AP/include/: keys.c
simple_AP/src/: main.c
